--- a/Timesheets/appsettings.json
+++ b/Timesheets/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "OldDefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Timesheets-81F1A023-6222-4659-9D53-3AC85E0E7990;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=.\\SQLExpress;Database=Timesheets;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Timesheets-81F1A023-6222-4659-9D53-3AC85E0E7990;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.\\SQLExpress;Database=Timesheets;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=.\\SQLExpress;Database=Timesheets;User Id=timesheets_root;Password=root;MultipleActiveResultSets=true"
   },
   "Logging": {
