ApplicationUser fixes Also includes a basic TimesheetsController Index

--- a/Timesheets/Timesheets.csproj
+++ b/Timesheets/Timesheets.csproj
@@ -35,4 +35,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
